--- a/css/main.css
+++ b/css/main.css
@@ -150,6 +150,7 @@ body header .nav ul {
 body header .nav ul li {
   list-style: none;
   padding: 25px;
+  font-size: 20px;
 }
 body header .nav ul li a {
   color: snow;
