--- a/css/main.css
+++ b/css/main.css
@@ -129,9 +129,9 @@ body header .logo a {
   justify-content: center;
 }
 body header .logo a .header-logo {
-  background-image: url(../img/logo-white.png);
+  background-image: url(../img/VIT.png);
   height: 50px;
-  width: 175px;
+  width: 205px;
   background-size: cover;
 }
 body header .logo a .header-logo.active {
@@ -149,7 +149,7 @@ body header .nav ul {
 }
 body header .nav ul li {
   list-style: none;
-  padding: 25px;
+  padding: 20px;
   font-size: 20px;
 }
 body header .nav ul li a {
@@ -158,7 +158,7 @@ body header .nav ul li a {
   font-weight: 900;
 }
 body header .nav ul li a:hover {
-  color: black;
+  color: #1FC2C2 !important;
   text-decoration: none;
 }
 body header .nav ul li a::after {
@@ -166,7 +166,7 @@ body header .nav ul li a::after {
   display: block;
   width: 0;
   height: 2px;
-  background: black;
+  background: #1FC2C2;
   transition: width 0.4s;
   text-underline-position: right under;
 }
@@ -202,6 +202,11 @@ body header .support-btn {
 }
 .section-start > section {
   padding-top: 150px;
+}
+.section-start .first-section h1 strong {
+  text-decoration: underline;
+  text-decoration-color: #1FC2C2;
+  text-underline-position: under;
 }
 .section-start .first-section .section-wrapper {
   padding: 0px 0px 150px 0px;
@@ -303,7 +308,9 @@ body header .support-btn {
 }
 .hero-image .hero-text h1 {
   color: white;
-  font-size: calc(34px + (36 - 10) * ((100vw - 900px) / (1100 - 300)));
+  font-size: calc(34px + (46 - 10) * ((100vw - 900px) / (1100 - 300)));
+  text-decoration: underline;
+  text-decoration-color: #1FC2C2;
   font-weight: bold;
 }
 .hero-image video {
@@ -313,6 +320,7 @@ body header .support-btn {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: -1;
 }
 .hero-image .text-animation {
   display: none;
@@ -405,6 +413,9 @@ section .section-wrapper ul {
 }
 .second-section .section-wrapper .our-expertise .clients-container video {
   object-fit: cover;
+  width: 200px;
+  margin: 0 auto;
+  display: block;
 }
 .third-section {
   background-color: white;
@@ -412,7 +423,11 @@ section .section-wrapper ul {
 }
 .third-section h1 {
   text-align: center;
-  padding-bottom: 50px;
+}
+.third-section h1 strong {
+  text-decoration: underline;
+  text-decoration-color: #1FC2C2;
+  text-underline-position: under;
 }
 .third-section .projects-container {
   display: flex;
