--- a/css/main.css
+++ b/css/main.css
@@ -290,7 +290,7 @@ body header .support-btn {
 }
 
 .hero-image {
-  background-image: url("../img/test-1.jpg");
+  background-image: url("../img/container.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
