--- a/scss/main.scss
+++ b/scss/main.scss
@@ -256,7 +256,7 @@ body {
 }
 
 .hero-image {
-  background-image: url("../img/test-1.jpg");
+  background-image: url('../img/container.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
