--- a/scss/main.scss
+++ b/scss/main.scss
@@ -209,7 +209,7 @@ body {
 
 .wave-bottom {
   // background-image: linear-gradient(0deg, #5ED9FF 0%, #416AD9 100%);
-  padding: 100px 0 164px 0;
+  padding: 0px 0 164px 0;
   position: relative;
   background-color: #222;
 
@@ -483,7 +483,6 @@ section {
 
 .fifth-section {
   background-color: white !important;
-
   .personbild {
     // min-width: 150px;
     margin: 0 auto;
@@ -570,35 +569,9 @@ footer {
   color: white;
 }
 
-.card {
-  background: #fff;
-  border-radius: 2px;
-  display: inline-block;
-  height: 300px;
-  margin: 1rem;
-  position: relative;
-  width: 300px;
-}
-
-.card-1 {
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-}
-
-.card-1:hover {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-
-.card-2 {
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-}
-
-.card-3 {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-}
 
 .services-first-section {
-  margin-top: 50vh;
+  margin-top: 75vh;
 }
 
 .services-second-section {
@@ -606,20 +579,25 @@ footer {
   margin: 0 auto;
   margin-top: 75px;
 
-  h1 {
+  h1:nth-child(1) {
     padding: 50px 0px;
     display: block;
   }
-
-  .case-container {
-    height: 30vh;
+  .case-container:nth-child(1) {
     min-height: 200px;
-
+    padding:50px 0px 25px 0px;
+  }
+  .case-container {
+    min-height: 200px;
+    padding:0px 0px 25px 0px;
+    .col-sm-12 {
+      padding-top:20px;
+    }
     &:nth-child(odd) {
       flex-flow: row-reverse;
     }
 
-    .clients-text-container {
+    .clients-text-container div {
       height: 100%;
       display: flex;
       align-items: center;
@@ -634,17 +612,30 @@ footer {
 }
 
 .tjanster-hero-image {
-  // background-image: url('../img/scenic-water.png');
+  background-image: url('../img/container-peka.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  // background-position: center;
   z-index: -1;
   top: 0;
   position: fixed;
-  height: 50vh;
+  height: 75vh;
   width: 100%;
   display: flex;
+  .flex-container {
+    h1 {
+      font-size: calc(34px + (36 - 10) * ((100vw - 900px) / (1100 - 300)));
 
+    }
+    height: 75vh;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color:white;
+    
+}
   video {
     object-fit: cover;
     width: 100vw;
@@ -694,7 +685,14 @@ footer {
 }
 
 @media only screen and (max-width: 1024px) {
+  .section-start > section {
+    padding-top:50px;
+  }
   .third-section {
+    .third-section-container {
+      width:90%;
+      margin:0 auto;
+    }
     .projects-container {
       // display: block !important;
       .col {
@@ -733,6 +731,10 @@ footer {
 
 @media only screen and (max-width: 991px) {
   section .section-wrapper {
+    padding:50px 0px 150px 0px;
+    .our-expertise .col-sm-12 {
+      padding-top:25px;
+    }
   }
 
   .citat-wrapper {
@@ -815,21 +817,15 @@ footer {
 
     .case-container {
       display: block !important;
-      height: 70vh;
-
-      .col-sm-12 {
-        height: 50%;
-
-        &:nth-child(1) {
-          height: 60%;
-        }
-
-        &:nth-child(2) {
-          height: 40%;
-        }
-      }
     }
   }
+}
+.sixth-section {
+  background-color:#222;
+}
+.seventh-section {
+  background-color:#222;
+
 }
 
 @media only screen and (max-width: 768px) {
