--- a/css/main.css
+++ b/css/main.css
@@ -503,7 +503,7 @@ footer {
   width: 100%;
   padding-bottom: 25px;
   background-color: #222;
-  margin-top: -7px;
+  margin-top: -25px;
 }
 footer .logo-img {
   width: 230px;
@@ -545,6 +545,10 @@ footer .footer-container .side-col {
 .copyright {
   text-align: center;
   color: white;
+}
+
+div.wpforms-container-full .wpforms-form .wpforms-field .wpforms-field-row:last-of-type {
+  max-width: 100% !important;
 }
 
 .services-first-section {
@@ -755,6 +759,7 @@ footer div p {
 
 .seventh-section {
   background-color: #222;
+  color: White;
 }
 
 @media only screen and (max-width: 768px) {
