--- a/css/main.css
+++ b/css/main.css
@@ -471,8 +471,8 @@ section .section-wrapper ul {
 }
 .fifth-section .personbild {
   margin: 0 auto;
-  height: 200px;
-  max-width: 200px;
+  height: 300px;
+  max-width: 300px;
   border-radius: 50%;
   background-size: cover;
   background-position: center;
@@ -483,7 +483,7 @@ section .section-wrapper ul {
 .fifth-section .citat-wrapper {
   width: 90% !important;
   margin: 0 auto;
-  display: flex;
+  display: block;
 }
 .fifth-section .citat-wrapper .citat-text {
   display: flex;
