--- a/scss/main.scss
+++ b/scss/main.scss
@@ -487,8 +487,8 @@ section {
   .personbild {
     // min-width: 150px;
     margin: 0 auto;
-    height: 200px;
-    max-width: 200px;
+    height: 300px;
+    max-width: 300px;
     border-radius: 50%;
     background-size: cover;
     background-position: center;
@@ -501,7 +501,7 @@ section {
   .citat-wrapper {
     width: 90% !important;
     margin: 0 auto;
-    display: flex;
+    display: block;
 
     .citat-text {
       display: flex;
