--- a/css/main.css
+++ b/css/main.css
@@ -129,7 +129,7 @@ body header .logo a {
   justify-content: center;
 }
 body header .logo a .header-logo {
-  background-image: url(../img/VIT.png);
+  background-image: url(../img/logo-white.png);
   height: 50px;
   width: 205px;
   background-size: cover;
