--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,7 +54,7 @@ body {
         justify-content: center;
 
         .header-logo {
-          background-image: url(../img/VIT.png);
+          background-image: url(../img/logo-white.png);
           height: 50px;
           width: 205px;
           background-size: cover;
