--- a/scss/main.scss
+++ b/scss/main.scss
@@ -639,7 +639,7 @@ div.wpforms-container-full .wpforms-form input.wpforms-field-medium {
 }
 
 .blog-hero {
-  background-image: url('../img/container-peka.jpg');
+  background-image: url('../img/LIT7594.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   // background-position: center;
