--- a/scss/main.scss
+++ b/scss/main.scss
@@ -663,7 +663,7 @@ div.wpforms-container-full .wpforms-form input.wpforms-field-medium {
   background-image: url('../img/LIT7594.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  // background-position: center;
+  background-position: center;
   z-index: -1;
   top: 0;
   position: fixed;
