--- a/css/main.css
+++ b/css/main.css
@@ -636,6 +636,7 @@ div.wpforms-container-full .wpforms-form input.wpforms-field-medium {
   background-image: url("../img/LIT7594.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   z-index: -1;
   top: 0;
   position: fixed;
@@ -732,6 +733,13 @@ div.wpforms-container-full .wpforms-form input.wpforms-field-medium {
   }
 }
 @media only screen and (max-width: 991px) {
+  .hero-image .hero-text h1 {
+    color: white;
+    font-size: 35px;
+    font-weight: bold;
+    text-align: center;
+  }
+
   h2 {
     font-weight: bolder;
     font-size: 28px !important;
